Arrow alignment fix

--- a/style.css
+++ b/style.css
@@ -128,6 +128,7 @@ body.postseason .game {
 
 .arrow {
     display: none;
+    align-self: center;
 }
 
 .winner .arrow {
